<resources>
    <string name="app_name">Idle Oxygen vending</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Mejoras</string>
    <string name="title_notifications">Proximamente</string>
    <string name="id_ads">ca-app-pub-2778238032768435~5161129042</string>
    <string name="id_ads2">ca-app-pub-2778238032768435/9262389103</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="action_settings">Settings</string>
    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="web_client_id">365916840517-p3eh0sq1tskc12mactl20ahbts9ufqm5.apps.googleusercontent.com</string>
    <string name="nameSpaceSharedPreferences">MiPreferencia</string>
    <string name="key1">gmail</string>
    <string name="key2">google</string>
    <string name="firstLogin">firstLogin</string>
    <string name="firebase_table_usuario">usuario</string>
    <string name="firebase_table_mejoras">mejoras</string>
    <string name="firebase_table_mejoras_por_user">mejora_por_usuario</string>
    <string name="firebase_id_usuario">id</string>
    <string name="firebase_email_usuario">email</string>
    <string name="firebase_oxygenQuantity_usuario">oxygenQuantity</string>
    <string name="firebase_last_conn_time_usuario">last_conn_time</string>
    <string name="firebase_prestige_lvl_usuario">prestige_lvl</string>
    <string name="firebase_prestige_points_usuario">prestige_points</string>
    <string name="firebase_idusuario_mejoraporusuario">usuario</string>
    <string name="firebase_idmejora_mejoraporusuario">mejora</string>
    <string name="firebase_nivel_mejoraporusuario">nivel</string>
    <string name="keyID">id_Usuario_Logueado</string>
    <string name="firebase_id_mejora">id</string>
    <string name="firebase_nombre_mejora">nombre</string>
    <string name="firebase_descripcion_mejora">descripcion</string>
    <string name="firebase_o2ps_mejora">o2ps</string>
    <string name="firebase_baseprice_mejora">baseprice</string>
    <string name="mejoras_btn_text">mejorar</string>
    <string name="mejoras_precio_null">Desconocido</string>
    <string name="mejoras_nivel_null">0</string>
    <string name="mejoras_nombre">Nombre</string>
    <string name="mejoras_precio">Precio</string>
    <string name="mejoras_nivel">Nivel</string>
    <string name="mejoras_o2ps">02ps</string>
    <string name="mejoras_btn_mejora">Mejora</string>
    <string name="mejoras_iv_desc">Icono de la Mejora</string>
    <string name="inicio_tv_o2">tVOxygen</string>
</resources>